reorganized projects based on blueprint

--- a/semantic_segs/POI from Foursquare.ipynb
+++ b/semantic_segs/POI from Foursquare.ipynb
@@ -2429,6 +2429,99 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<function utils.geofunc.grid_area>"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import sys\n",
+    "\n",
+    "# sys.path.insert(0, os.path.abspath('../../'))\n",
+    "from utils import geofunc\n",
+    "geofunc.grid_area"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'D:\\\\\\xa1\\xef\\xa1\\xef\\xd1\\xa7\\xcf\\xb0\\xb9\\xa4\\xd7\\xf7\\\\Life in Maryland\\\\Research Project\\xa3\\xbaCyclingSafe\\\\github'"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import os\n",
+    "os.path.abspath('../../')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['D:\\\\\\xa1\\xef\\xa1\\xef\\xd1\\xa7\\xcf\\xb0\\xb9\\xa4\\xd7\\xf7\\\\Life in Maryland\\\\Research Project\\xa3\\xbaCyclingSafe\\\\github',\n",
+       " 'D:\\\\\\xa1\\xef\\xa1\\xef\\xd1\\xa7\\xcf\\xb0\\xb9\\xa4\\xd7\\xf7\\\\Life in Maryland\\\\Research Project\\xa3\\xbaCyclingSafe\\\\github\\\\Cycling_Safe',\n",
+       " 'D:\\\\\\xa1\\xef\\xa1\\xef\\xd1\\xa7\\xcf\\xb0\\xb9\\xa4\\xd7\\xf7\\\\Life in Maryland\\\\Research Project\\xa3\\xbaCyclingSafe\\\\github\\\\Cycling_Safe',\n",
+       " 'D:\\\\\\xa1\\xef\\xa1\\xef\\xd1\\xa7\\xcf\\xb0\\xb9\\xa4\\xd7\\xf7\\\\Life in Maryland\\\\Research Project\\xa3\\xbaCyclingSafe\\\\github\\\\Cycling_Safe',\n",
+       " '',\n",
+       " 'D:\\\\Program Files\\\\Anaconda2\\\\lib\\\\site-packages\\\\pgmpy-0.1.0-py2.7.egg',\n",
+       " 'D:\\\\Program Files\\\\Anaconda2\\\\lib\\\\site-packages\\\\coveralls-1.1-py2.7.egg',\n",
+       " 'D:\\\\Program Files\\\\Anaconda2\\\\lib\\\\site-packages\\\\docopt-0.6.2-py2.7.egg',\n",
+       " 'D:\\\\Program Files\\\\Anaconda2\\\\lib\\\\site-packages\\\\coverage-4.1b2-py2.7-win-amd64.egg',\n",
+       " 'D:\\\\Program Files\\\\Anaconda2\\\\python27.zip',\n",
+       " 'D:\\\\Program Files\\\\Anaconda2\\\\DLLs',\n",
+       " 'D:\\\\Program Files\\\\Anaconda2\\\\lib',\n",
+       " 'D:\\\\Program Files\\\\Anaconda2\\\\lib\\\\plat-win',\n",
+       " 'D:\\\\Program Files\\\\Anaconda2\\\\lib\\\\lib-tk',\n",
+       " 'D:\\\\Program Files\\\\Anaconda2',\n",
+       " 'D:\\\\Program Files\\\\Anaconda2\\\\lib\\\\site-packages',\n",
+       " 'D:\\\\Program Files\\\\Anaconda2\\\\lib\\\\site-packages\\\\Sphinx-1.3.1-py2.7.egg',\n",
+       " 'D:\\\\Program Files\\\\Anaconda2\\\\lib\\\\site-packages\\\\cryptography-0.9.1-py2.7-win-amd64.egg',\n",
+       " 'D:\\\\Program Files\\\\Anaconda2\\\\lib\\\\site-packages\\\\win32',\n",
+       " 'D:\\\\Program Files\\\\Anaconda2\\\\lib\\\\site-packages\\\\win32\\\\lib',\n",
+       " 'D:\\\\Program Files\\\\Anaconda2\\\\lib\\\\site-packages\\\\Pythonwin',\n",
+       " 'D:\\\\Program Files\\\\Anaconda2\\\\lib\\\\site-packages\\\\IPython\\\\extensions']"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import sys\n",
+    "sys.path"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 147,
    "metadata": {
     "collapsed": false
