--- a/data_prepro/getOSM_within_dc_poly.ipynb
+++ b/data_prepro/getOSM_within_dc_poly.ipynb
@@ -34,6 +34,29 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 115,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "begin reading osm 2016-11-01 21:56:03.653000\n",
+      "finish reading osm 2016-11-01 21:56:46.525000\n",
+      "[\"len of <class 'osmread.elements.Node'> = 1652906\", \"len of <class 'osmread.elements.Relation'> = 0\", \"len of <class 'osmread.elements.Way'> = 194767\"]\n"
+     ]
+    }
+   ],
+   "source": [
+    "OSM_in_DC = '../data/OSMinDCPoly.osm'\n",
+    "OSM_DATA_in_DC = osm_container(OSM_in_DC)\n",
+    "print OSM_DATA_in_DC.data_size()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "metadata": {
     "collapsed": false
@@ -163,7 +186,122 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 96,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "ename": "ImportError",
+     "evalue": "No module named BeautifulSoup",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-96-cf01af37c322>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[1;32mfrom\u001b[0m \u001b[0mBeautifulSoup\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mBeautifulStoneSoup\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mcgi\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;32mdef\u001b[0m \u001b[0mHTMLEntitiesToUnicode\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtext\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m     \u001b[1;34m\"\"\"Converts HTML entities to unicode.  For example '&amp;' becomes '&'.\"\"\"\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m     \u001b[0mtext\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0municode\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mBeautifulStoneSoup\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtext\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mconvertEntities\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mBeautifulStoneSoup\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mALL_ENTITIES\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mImportError\u001b[0m: No module named BeautifulSoup"
+     ]
+    }
+   ],
+   "source": [
+    "s.decode('unicode_escape')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'http://siris-artinventories.si.edu/ipac20/ipac.jsp?&amp;profile=all&amp;source=~!siartinventories&amp;uri=full=3100001~!6508~!0#focus'"
+      ]
+     },
+     "execution_count": 110,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "s = cgi.escape( 'http://siris-artinventories.si.edu/ipac20/ipac.jsp?&profile=all&source=~!siartinventories&uri=full=3100001~!6508~!0#focus')   # s = \"&amp; &lt; &gt;\"\n",
+    "s"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Node(id=358960371L, version=3, changeset=33846823, timestamp=1441601622, uid=307520, tags={u'gnis:state_id': u'11', u'name': u'Louis Daguerre Statue', u'wikipedia': u'en:Daguerre Memorial', u'gnis:county_id': u'001', u'artist_name': u'Jonathan Scott Hartley', u'ele': u'15', u'note': u'More about this sculpture: http://siris-artinventories.si.edu/ipac20/ipac.jsp?&profile=all&source=~!siartinventories&uri=full=3100001~!6508~!0#focus', u'gnis:created': u'09/26/2003', u'gnis:feature_id': u'2002612', u'artwork_type': u'statue', u'tourism': u'artwork'}, lon=-77.0221987, lat=38.897334)\n"
+     ]
+    }
+   ],
+   "source": [
+    "for n in DC_NODES:\n",
+    "    if n.id==358960371:\n",
+    "        print n\n",
+    "        break"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'http://siris-artinventories.si.edu/ipac20/ipac.jsp?&profile=all&source=~!siartinventories&uri=full=3100001~!6508~!0#focus'"
+      ]
+     },
+     "execution_count": 104,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "unicode('http://siris-artinventories.si.edu/ipac20/ipac.jsp?&profile=all&source=~!siartinventories&uri=full=3100001~!6508~!0#focus').decode('string_escape')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'More about this sculpture: http://siris-artinventories.si.edu/ipac20/ipac.jsp?&amp;profile=all&amp;source=~!siartinventories&amp;uri=full=3100001~!6508~!0#focus'"
+      ]
+     },
+     "execution_count": 98,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "unicode(\"More about this sculpture: http://siris-artinventories.si.edu/ipac20/ipac.jsp?&amp;profile=all&amp;source=~!siartinventories&amp;uri=full=3100001~!6508~!0#focus\").encode('utf-8')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 116,
    "metadata": {
     "collapsed": false,
     "scrolled": false
@@ -175,11 +313,12 @@
     "    return datetime.datetime.strftime(time_type, '%Y-%m-%dT%H:%M:%SZ')\n",
     "\n",
     "def get_key_str(osm_obj, keys):\n",
+    "    import cgi\n",
     "    obj_str = ''\n",
     "    for k in keys:\n",
     "        if hasattr(osm_obj,k):\n",
     "            s = getattr(osm_obj, k) if not k=='timestamp' else fromts(getattr(osm_obj, k))\n",
-    "            obj_str += ' {}=\"{}\"'.format(k, s)\n",
+    "            obj_str += cgi.escape(' {}=\"{}\"'.format(k, s))\n",
     "        else:\n",
     "            print k, osm_obj\n",
     "    return obj_str\n",
@@ -187,7 +326,7 @@
     "def get_tag_str(osm_obj):\n",
     "    tag_str = ''\n",
     "    for k, v in osm_obj.tags.items():\n",
-    "        tag_str += '\\n <tag k=\"{}\" v=\"{}\"/>'.format(k.encode('utf-8'),v.encode('utf-8'))\n",
+    "        tag_str += '\\n <tag k=\"{}\" v=\"{}\"/>'.format(cgi.escape(k.encode('utf-8')),cgi.escape(v.encode('utf-8')))\n",
     "    return tag_str\n",
     "\n",
     "def get_node_str(osm_node):\n",
@@ -235,9 +374,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 117,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -247,6 +386,15 @@
     "}\n",
     "output_osm(DC_OBJS,'../data/OSMinDCPoly.osm')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
