plotting the distribution of foursquare venues categories

--- a/data_prepro/frsq parsing taxonomy tree.ipynb
+++ b/data_prepro/frsq parsing taxonomy tree.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "js_path = '../data/foursquare-taxonomy.json'\n",
+    "js_path = '../data/frsq/foursquare-taxonomy.json'\n",
     "import json\n",
     "with open(js_path) as f:\n",
     "    JS = json.load(f)"
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
@@ -34,13 +34,13 @@
     "#         break\n",
     "    return result\n",
     "import pandas as pd\n",
-    "df = pd.DataFrame(parse_categories(JS,'none',1))\n",
+    "df = pd.DataFrame(parse_categories(JS,'root',1))\n",
     "df.columns = ['parent_id', 'cid', 'pluralName', 'shortName', 'name', 'icon', 'level','order']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false
    },
@@ -50,8 +50,8 @@
      "output_type": "stream",
      "text": [
       "(10, 8) (1L,)\n",
-      "(429, 8) (10L,)\n",
-      "(167, 8) (29L,)\n"
+      "(437, 8) (10L,)\n",
+      "(345, 8) (49L,)\n"
      ]
     }
    ],
@@ -63,7 +63,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 22,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(10, 8) (1L,)\n",
+      "(437, 8) (10L,)\n",
+      "(345, 8) (49L,)\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(1,4):\n",
+    "    sub_df = df.query('level==%d' %i)\n",
+    "    print sub_df.shape, sub_df.parent_id.value_counts().shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -72,18 +95,29 @@
     {
      "data": {
       "text/plain": [
-       "False    585\n",
-       "True      21\n",
+       "False    867\n",
+       "True      19\n",
        "dtype: int64"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "(df.name==df.pluralName).value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "df.drop('icon', axis=1).to_csv('../data/frsq/frsq_taxonomy_tree.csv', encoding='utf-8')"
    ]
   },
   {
