--- a/semantic_segs/frsq 3. venues visualization - categories distr. and spatial distr..ipynb
+++ b/semantic_segs/frsq 3. venues visualization - categories distr. and spatial distr..ipynb
@@ -88,131 +88,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "FRSQ_OUTPUT_PATH ='../data/output/frsq/'"
+    "FRSQ_DIR ='../data/frsq/'\n",
+    "FRSQ_GRAPH_DIR = FRSQ_DIR+'graphs/'\n",
+    "SUFFIX = '_nearby'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 206,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "frsq_venues_path = FRSQ_DIR+ 'frsq_extracted_venues{}.geojson'.format(SUFFIX)\n",
+    "venues_gpdf = gp.read_file(frsq_venues_path)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 207,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>category</th>\n",
-       "      <th>checkins</th>\n",
-       "      <th>geometry</th>\n",
-       "      <th>id</th>\n",
-       "      <th>name</th>\n",
-       "      <th>tips</th>\n",
-       "      <th>users</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Yoga Studio</td>\n",
-       "      <td>3</td>\n",
-       "      <td>POINT (-77.03195 38.907859)</td>\n",
-       "      <td>4c59a65a7b0495214eff881f</td>\n",
-       "      <td>DC Men's Yoga Logan</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>New American Restaurant</td>\n",
-       "      <td>7097</td>\n",
-       "      <td>POINT (-77.03215554124289 38.90794947700525)</td>\n",
-       "      <td>4f43a862e4b0c5334ec119b4</td>\n",
-       "      <td>The Pig</td>\n",
-       "      <td>132</td>\n",
-       "      <td>4724</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Salon / Barbershop</td>\n",
-       "      <td>3537</td>\n",
-       "      <td>POINT (-77.03209369053353 38.90782164382843)</td>\n",
-       "      <td>4cbc78a24c60a09392a451ca</td>\n",
-       "      <td>Logan 14 Aveda</td>\n",
-       "      <td>21</td>\n",
-       "      <td>592</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Thrift / Vintage Store</td>\n",
-       "      <td>1380</td>\n",
-       "      <td>POINT (-77.03214429566171 38.90787890285452)</td>\n",
-       "      <td>4fd73de3e4b083608f36fd7a</td>\n",
-       "      <td>Buffalo Exchange</td>\n",
-       "      <td>9</td>\n",
-       "      <td>708</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Building</td>\n",
-       "      <td>59</td>\n",
-       "      <td>POINT (-77.03238607542635 38.90781627498764)</td>\n",
-       "      <td>4c2e53c13896e21ea50ee290</td>\n",
-       "      <td>Copperstone Building</td>\n",
-       "      <td>0</td>\n",
-       "      <td>8</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "                  category  checkins  \\\n",
-       "0              Yoga Studio         3   \n",
-       "1  New American Restaurant      7097   \n",
-       "2       Salon / Barbershop      3537   \n",
-       "3   Thrift / Vintage Store      1380   \n",
-       "4                 Building        59   \n",
-       "\n",
-       "                                       geometry                        id  \\\n",
-       "0                   POINT (-77.03195 38.907859)  4c59a65a7b0495214eff881f   \n",
-       "1  POINT (-77.03215554124289 38.90794947700525)  4f43a862e4b0c5334ec119b4   \n",
-       "2  POINT (-77.03209369053353 38.90782164382843)  4cbc78a24c60a09392a451ca   \n",
-       "3  POINT (-77.03214429566171 38.90787890285452)  4fd73de3e4b083608f36fd7a   \n",
-       "4  POINT (-77.03238607542635 38.90781627498764)  4c2e53c13896e21ea50ee290   \n",
-       "\n",
-       "                   name  tips  users  \n",
-       "0   DC Men's Yoga Logan     0      2  \n",
-       "1               The Pig   132   4724  \n",
-       "2        Logan 14 Aveda    21    592  \n",
-       "3      Buffalo Exchange     9    708  \n",
-       "4  Copperstone Building     0      8  "
+       "True     19260\n",
+       "False     1203\n",
+       "dtype: int64"
       ]
      },
-     "execution_count": 141,
+     "execution_count": 207,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "frsq_venues_path = FRSQ_OUTPUT_PATH+ 'frsq_extracted_venues.geojson'\n",
-    "venues_gpdf = gp.read_file(frsq_venues_path)\n",
-    "venues_gpdf.head()"
+    "(venues_gpdf.category!='').value_counts()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -220,10 +145,10 @@
     {
      "data": {
       "text/plain": [
-       "34060"
+       "20463"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -231,6 +156,154 @@
    "source": [
     "cnt_venues = venues_gpdf.shape[0]\n",
     "cnt_venues"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "506"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "categories_we_have = set(venues_gpdf.category)\n",
+    "len(categories_we_have)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "categories_count = venues_gpdf[['category','name']].groupby('category').agg('count').sort('name',ascending=False)\n",
+    "categories_count.reset_index(inplace=True)\n",
+    "categories_count.columns = ['name', 'venues_cnt']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# category tree"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 195,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "frsq_taxonomy_path = FRSQ_DIR+'frsq_taxonomy_tree.csv'\n",
+    "import pandas as pd\n",
+    "df_cate = pd.read_csv(frsq_taxonomy_path,index_col=0,encoding='utf-8')\n",
+    "categories_in_tree = set(df[df.name.isin(categories_we_have)].name)\n",
+    "df_cate=df_cate.merge(categories_count,how='left')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 196,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "mask1 = df_cate.name.isin(categories_we_have)\n",
+    "mask2 = mask1 | (df_cate.cid.isin(df[mask1].parent_id))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 262,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "((886, 8), (505, 8), (511, 8))"
+      ]
+     },
+     "execution_count": 262,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_cate.shape, df_cate[mask1].shape, df_cate[mask2].shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 263,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "level\n",
+       "1     10\n",
+       "2    437\n",
+       "3    345\n",
+       "4     81\n",
+       "5     13\n",
+       "Name: cid, dtype: int64"
+      ]
+     },
+     "execution_count": 263,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_cate.groupby('level').agg('count').cid"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 264,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "level\n",
+       "1     10\n",
+       "2    321\n",
+       "3    164\n",
+       "4     16\n",
+       "Name: cid, dtype: int64"
+      ]
+     },
+     "execution_count": 264,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_cate[mask2].groupby('level').agg('count').cid"
    ]
   },
   {
@@ -242,7 +315,125 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 268,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "def get_df_of_interest(df):\n",
+    "    from collections import defaultdict\n",
+    "    df_of_interest = df.copy()\n",
+    "    df_of_interest = df_of_interest.append(\n",
+    "        pd.DataFrame([['']+['root']*(df_of_interest.shape[1]-4)+[0]*3],columns=df_of_interest.columns),\n",
+    "        ignore_index=True)\n",
+    "    df_of_interest.venues_cnt = df_of_interest.venues_cnt.fillna(0)\n",
+    "    lvls = pd.unique(df_of_interest.sort('level',ascending=False).level)\n",
+    "    update_cnt = defaultdict(list)\n",
+    "    for lv in lvls:\n",
+    "        df_lv = df_of_interest[df_of_interest.level==lv]\n",
+    "        for row in df_lv.iterrows():\n",
+    "            idx = row[0]\n",
+    "            row = row[1]\n",
+    "            parent,cid, vcnt = row['parent_id'], row.cid, row.venues_cnt\n",
+    "            children = update_cnt.get(cid, [])\n",
+    "            children_cnt = len(children)\n",
+    "            cnt = 0\n",
+    "            for c in children:\n",
+    "                cnt+=c[-1]\n",
+    "                children_cnt+=c[-2]\n",
+    "            \n",
+    "            update_cnt[parent].append((idx,cid, vcnt ,children_cnt,cnt+vcnt))\n",
+    "    list_cnt = []\n",
+    "    for k, v in update_cnt.items():\n",
+    "        list_cnt+=v\n",
+    "    return df_of_interest.merge(pd.DataFrame(list_cnt, columns=['index','cid', 'vcnt' ,'children_cnt','aggcnt']).set_index('index'))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 269,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "df_of_interest = get_df_of_interest(df_cate[mask2])\n",
+    "df_of_interest[df_of_interest.level==1][['name','children_cnt']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 275,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "with open(FRSQ_DIR+'frsq_taxonomy_tree.txt','w') as f:\n",
+    "    f.write('\\n'.join(df_of_interest.apply(lambda x:'{}{}'.format('\\t'*x.level, x['name'].encode('utf-8')), axis=1).values))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 271,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "def get_df_lv(df, lv):\n",
+    "    df_lv = df[df.level==lv].copy()\n",
+    "    df_lv = df_lv.sort(['parent_id', 'cid']).merge(df[df.level==(lv-1)][['cid','name']], left_on='parent_id', right_on='cid', how='left')\n",
+    "    df_lv = df_lv[['cid_x','name_x','aggcnt','name_y']]\n",
+    "    df_lv.columns = [['cid','name','aggcnt','parent_name']]\n",
+    "    df_lv = df_lv[['parent_name','cid','name','aggcnt']]\n",
+    "    return df_lv\n",
+    "\n",
+    "def get_random_color(parents):\n",
+    "    rand_colors = {}\n",
+    "    import random\n",
+    "    for p in parents:\n",
+    "        rand_colors[p] = \"#%06x\" % random.randint(0, 0xFFFFFF)\n",
+    "    return rand_colors        \n",
+    "\n",
+    "def get_category_dist(df_lv,rand_colors):\n",
+    "    parents,colors, labels, cnts = [], [], [], []\n",
+    "    for parent,cid, name, aggcnt in df_lv.values:\n",
+    "        parents.append(parent)\n",
+    "        colors.append(rand_colors[parent])\n",
+    "        labels.append(name)\n",
+    "        cnts.append(aggcnt)\n",
+    "    return parents,colors, labels, cnts\n",
+    "\n",
+    "    \n",
+    "def get_bar_plot(parents,colors, labels, cnts, lv, fn_bar):\n",
+    "    pplot_para = {}\n",
+    "    pplot_para['data'] = [pgo.Bar(x=labels,y=cnts,text=parents,marker=dict(color=colors))]\n",
+    "    pplot_para['layout'] = pgo.Layout(title='distribution of categories, level={}'.format(lv), \n",
+    "                                xaxis=dict(title='category'), yaxis=dict(title='cnt of venues'))\n",
+    "    pplot(pplot_para, filename=fn_bar)\n",
+    "def visualize_category_dist(df, lv):\n",
+    "    fn_csv = FRSQ_GRAPH_DIR+'frsq_categories_distr_lv={}{}.csv'.format(lv,SUFFIX)\n",
+    "    fn_bar = FRSQ_GRAPH_DIR+'frsq_categories_distr_lv={}{}.html'.format(lv,SUFFIX)\n",
+    "    df_lv = get_df_lv(df, lv)\n",
+    "    df_lv.to_csv(fn_csv, encoding='utf-8')\n",
+    "    parents = df_lv.parent_name.tolist()\n",
+    "    rand_colors = get_random_color(parents)\n",
+    "    parents,colors, labels, cnts = get_category_dist(df_lv, rand_colors)\n",
+    "    get_bar_plot(parents,colors, labels, cnts,lv,fn_bar)\n",
+    "\n",
+    "    \n",
+    "lvls = pd.unique(df_of_interest.sort('level',ascending=False).level)\n",
+    "for i in lvls[-2:-1]:\n",
+    "    visualize_category_dist(df_of_interest, i)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -253,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -263,8 +454,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "has categories 32099 0.94242513212\n",
-      "no categories  1961  0.0575748678802\n"
+      "has categories 19260 0.941210966134\n",
+      "no categories  1203  0.058789033866\n"
      ]
     }
    ],
@@ -275,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -286,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -294,10 +485,10 @@
     {
      "data": {
       "text/plain": [
-       "'file://D:\\\\\\xa1\\xef\\xa1\\xef\\xd1\\xa7\\xcf\\xb0\\xb9\\xa4\\xd7\\xf7\\\\Life in Maryland\\\\Research Project\\xa3\\xbaCyclingSafe\\\\github\\\\Cycling_Safe\\\\data\\\\output\\\\frsq\\\\frsq_categories_hist.html'"
+       "'file://D:\\\\\\xa1\\xef\\xa1\\xef\\xd1\\xa7\\xcf\\xb0\\xb9\\xa4\\xd7\\xf7\\\\Life in Maryland\\\\Research Project\\xa3\\xbaCyclingSafe\\\\github\\\\Cycling_Safe\\\\data\\\\frsq\\\\graphs\\\\frsq_categories_hist_nearby.html'"
       ]
      },
-     "execution_count": 140,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -309,14 +500,14 @@
     "        'layout': pgo.Layout(title='distribution of categories', xaxis=dict(title='category'), \n",
     "                                                            yaxis=dict(title='cnt of venues'))\n",
     "       },\n",
-    "       filename=FRSQ_OUTPUT_PATH+'frsq_categories_distr.html'\n",
+    "       filename=FRSQ_GRAPH_DIR+'frsq_categories_distr{}.html'.format(SUFFIX)\n",
     "      )\n",
     "pplot({\n",
     "        'data':[pgo.Histogram(x=y)], \n",
     "        'layout': pgo.Layout(title='histogram of categories', xaxis=dict(title='cnt of venues'), \n",
     "                                                            yaxis=dict(title='cnt of categories'))\n",
     "        },\n",
-    "       filename=FRSQ_OUTPUT_PATH+'frsq_categories_hist.html'\n",
+    "       filename=FRSQ_GRAPH_DIR+'frsq_categories_hist{}.html'.format(SUFFIX)\n",
     "      )"
    ]
   },
@@ -342,7 +533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -355,7 +546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -366,7 +557,7 @@
        "(-77.1197663, 38.7916303, -76.909366, 38.9958524)"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -381,7 +572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -392,7 +583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -408,7 +599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -419,79 +610,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 34,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "venus_in_grids = gp.tools.sjoin(venues_gpdf, grids_gpdf)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 130,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "grids_venues_cnt = grids_gpdf.merge(gp.GeoDataFrame(venus_in_grids.groupby('index_right').agg('count').name),\n",
-    "                                    left_index=True, right_index=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 131,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "grids_venues_cnt.columns = ['geometry', 'venues_cnt']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 132,
-   "metadata": {
-    "collapsed": false,
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "get_color_for_df(grids_venues_cnt, 'venues_cnt', False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 133,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "# reload(utils.leaflet_creation_v2)\n",
+    "import utils.leaflet_creation_v2;reload(utils.leaflet_creation_v2)\n",
     "from utils.leaflet_creation_v2 import get_color_for_df, create_map_visualization"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 30,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "venus_in_grids = gp.tools.sjoin(venues_gpdf, grids_gpdf)\n",
+    "grids_venues_cnt = grids_gpdf.merge(gp.GeoDataFrame(venus_in_grids.groupby('index_right').agg('count').name),\n",
+    "                                    left_index=True, right_index=True)\n",
+    "grids_venues_cnt.columns = ['geometry', 'venues_cnt']\n",
+    "get_color_for_df(grids_venues_cnt, 'venues_cnt', False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "html_title = 'frsq_venues_distribution'\n",
-    "file_name = FRSQ_OUTPUT_PATH+'frsq_venues'\n",
+    "file_path = FRSQ_GRAPH_DIR\n",
+    "file_name = 'frsq_venues'+SUFFIX\n",
     "lon, lat = dc_poly.centroid.coords[0]\n",
     "zoom = 12\n",
     "init_layer = ['light', 'venues_layer']\n",
     "map_layer = ['light','streets','satellite']\n",
     "binding_data = [['venues', 'foursqaure venues']]\n",
     "gpdfs = [grids_venues_cnt]\n",
-    "create_map_visualization(html_title, file_name, lat, lon, zoom, init_layer, map_layer, binding_data, gpdfs)"
+    "create_map_visualization(html_title, file_path, file_name, lat, lon, zoom, init_layer, map_layer, binding_data, gpdfs)"
    ]
   },
   {
