--- a/semantic_segs/frsq_near_segments.ipynb
+++ b/semantic_segs/frsq_near_segments.ipynb
@@ -20,8 +20,8 @@
    "outputs": [],
    "source": [
     "frsq_venues_path = '../data/frsq/frsq_extracted_venues.geojson'\n",
-    "opendc_segments_path = '../data/opendc_segments.geojson'\n",
     "FRSQ_VENUES = gp.read_file(frsq_venues_path)\n",
+    "opendc_segments_path = '../data/opendc_segments.geojson'\n",
     "SEGMENTS = gp.read_file(opendc_segments_path)"
    ]
   },
@@ -44,17 +44,14 @@
     "    return seg.geometry.buffer(20)\n",
     "\n",
     "def get_objs_nearby(segments, objs, bfr_func, init_crs, bfr_crs):\n",
-    "    segments, objs, bfr_func, init_crs, bfr_crs = SEGMENTS, FRSQ_VENUES, bfr_fix, 4326, 3559\n",
     "    seg_crs = crs_prepossess(segments, init_crs, bfr_crs)\n",
     "    obj_crs = crs_prepossess(objs, init_crs, bfr_crs)\n",
     "    seg_crs.geometry = seg_crs.apply(bfr_20m,axis=1)\n",
     "\n",
     "    sjoin = gp.tools.sjoin(seg_crs, obj_crs, how='left',op='intersects')\n",
-    "    obj_ids_nearby = set(sjoin[~sjoin_slice.index_right.isnull()].index_right)\n",
+    "    obj_ids_nearby = set(sjoin[~sjoin.index_right.isnull()].index_right)\n",
     "    objs_nearby = objs[objs.index.isin(obj_ids_nearby)]\n",
-    "    return objs_nearby\n",
-    "\n",
-    "FRSQ_near_DCSEG = get_objs_nearby(SEGMENTS, FRSQ_VENUES, bfr_fix, 4326, 3559)"
+    "    return objs_nearby\n"
    ]
   },
   {
