OSM semantic pipeline

--- a/semantic_segs/OSM_get_all_tags_from_children.ipynb
+++ b/semantic_segs/OSM_get_all_tags_from_children.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -733,7 +733,7 @@
        "[148430 rows x 7 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -742,6 +742,18 @@
     "CHILD_PARENT_PATH = '../data/osm_child_direct_parent.csv'\n",
     "CHILD_PARENT = pd.read_csv(CHILD_PARENT_PATH, index_col=0)\n",
     "CHILD_PARENT"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "CHILD_PARENT.columns= [u'node', u'parent', u'lv', u'child_oid', u'child_otype', u'parent_oid',\n",
+    "       u'parent_otype']"
    ]
   },
   {
@@ -948,7 +960,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def get_sub_tree(tree_df, node_id, looping=0):\n",
+    "    mask_node = (tree_df.node==node_id)\n",
+    "    mask_children =  (tree_df.parent==str(node_id))\n",
+    "    assert looping<100, 'looping too much childid:'+str( node_id)\n",
+    "\n",
+    "    node = tree_df[mask_node]\n",
+    "    oid = node.child_oid.values[0]\n",
+    "    otype = node.child_otype.values[0]\n",
+    "    subtree = {((oid, otype),)}\n",
+    "\n",
+    "    children_oid = tree_df[mask_children].child_oid.values\n",
+    "    children_otype = tree_df[mask_children].child_otype.values\n",
+    "    children_oid_otype = zip(children_oid, children_otype)\n",
+    "    children_id = tree_df[mask_children].node.values\n",
+    "    subtree.update(children_oid_otype)\n",
+    "    if len(children_oid)==0:\n",
+    "        return subtree, node.shape\n",
+    "\n",
+    "    for cid in children_id:\n",
+    "        c_subtree, c_tree_shape = get_sub_tree(tree_df, cid, looping+1)\n",
+    "        subtree.update(c_subtree)\n",
+    "    return subtree, node.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "({((11,22),)})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -959,7 +1025,7 @@
        "5928"
       ]
      },
-     "execution_count": 115,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -975,7 +1041,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -986,7 +1052,7 @@
        "(132085L,)"
       ]
      },
-     "execution_count": 117,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -998,7 +1064,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -1007,8 +1073,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2016-11-11 16:24:08.452000\n",
-      "2016-11-11 16:29:47.012000\n"
+      "2016-11-12 19:43:08.117000\n",
+      "2016-11-12 19:43:08.168000\n"
      ]
     }
    ],
@@ -1031,29 +1097,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "5928"
-      ]
-     },
-     "execution_count": 122,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(sub_trees)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
@@ -1062,14 +1106,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "126157\n",
       "132085\n"
      ]
     }
    ],
    "source": [
     "nodes_have_no_child = set(sub_trees_root)-set(nodes_have_children)\n",
-    "nodes_have_no_child = CHILD_PARENT[CHILD_PARENT.child.isin(nodes_have_no_child)]\n",
+    "nodes_have_no_child = CHILD_PARENT[CHILD_PARENT.node.isin(nodes_have_no_child)]\n",
     "one_node_subtrees = nodes_have_no_child.apply(lambda x: set([(int(x.child_oid), x.child_otype)]),axis=1).tolist()\n",
     "sub_trees.extend(one_node_subtrees)\n",
     "print len(sub_trees)\n"
