--- a/semantic_segs/OSM_merge_overlapping_places.ipynb
+++ b/semantic_segs/OSM_merge_overlapping_places.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
@@ -10,6 +10,8 @@
    "source": [
     "import sys, os\n",
     "sys.path.insert(0, os.path.abspath('../'))\n",
+    "import utils.osm_helper\n",
+    "reload(utils.osm_helper)\n",
     "from utils.osm_helper import *\n",
     "import geopandas as gp\n",
     "from osmread import Node, Way, Relation\n",
@@ -19,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -28,23 +30,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "begin reading osm 2016-11-10 23:00:45.362000\n",
-      "finish reading osm 2016-11-10 23:01:56.912000\n",
-      "[\"len of <class 'osmread.elements.Relation'> = 3427\", \"len of <class 'osmread.elements.Way'> = 306332\", \"len of <class 'osmread.elements.Node'> = 2546260\"]\n"
+      "begin reading osm 2016-11-12 19:04:28.942000\n",
+      "finish reading osm 2016-11-12 19:05:40.775000\n",
+      "[\"len of <class 'osmread.elements.Relation'> = 3427\", \"len of <class 'osmread.elements.Node'> = 2546260\", \"len of <class 'osmread.elements.Way'> = 306332\"]\n"
      ]
     }
    ],
    "source": [
-    "OSM_DC_BBOX_PATH = '../data/dc_bbox.osm'\n",
+    "OSM_DC_BBOX_PATH = '../data/osm/osm_dc_bbox.osm'\n",
     "OSM_DC_BBOX = osm_container(OSM_DC_BBOX_PATH)\n",
     "print OSM_DC_BBOX.data_size()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": true
    },
    "outputs": [
     {
@@ -62,7 +65,7 @@
        "(140629, 19386, 2203)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -100,9 +103,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 9,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -160,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -171,7 +174,7 @@
        "(17, 369, 153, 147, 640, 12236)"
       ]
      },
-     "execution_count": 191,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -188,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -206,7 +209,7 @@
        "(1394, 1393)"
       ]
      },
-     "execution_count": 192,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -214,13 +217,14 @@
    "source": [
     "DC_WAYS_NOT_ADMIN_MOTOR_LANDUSE = filter_osm_data(DC_WAYS,special_filters=[filter_isnot_admin, filter_isnot_motorway,filter_isnot_landuse])\n",
     "print len(DC_WAYS_NOT_ADMIN_MOTOR_LANDUSE), len(DC_WAYS)-len(admin_way)-len(motor_way) - len(landuse_way)\n",
+    "\n",
     "DC_RLTNS_NOT_ADMIN_RESTRICTION_LANDUSE = filter_osm_data(DC_RLTNS,special_filters=[filter_isnot_admin, filter_isnot_restriction,filter_isnot_landuse])\n",
     "len(DC_RLTNS_NOT_ADMIN_RESTRICTION_LANDUSE), len(DC_RLTNS)-len(admin_rltn) - len(restriction_rltn) - len(landuse_rltn)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
@@ -238,7 +242,7 @@
     "\n",
     "def flatten_rltn_shpcltn(shpcltn):\n",
     "    flat_shpcltn = []\n",
-    "    for shpobjs in shpcltn.values:\n",
+    "    for shpobjs in shpcltn:\n",
     "        flat_shpcltn.extend(shpobjs)\n",
     "    return flat_shpcltn\n",
     "\n",
@@ -258,10 +262,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false,
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -273,12 +277,32 @@
     }
    ],
    "source": [
-    "GPDF_NEARBY = build_gpdf_list_from_osm(OSM_DC_BBOX, DC_NODES_WITH_TAG,DC_WAYS_NOT_ADMIN_MOTOR_LANDUSE, DC_RLTNS_NOT_ADMIN_RESTRICTION_LANDUSE)"
+    "GPDF_NEARBY = build_gpdf_list_from_osm(OSM_DC_BBOX, DC_NODES,DC_WAYS_NOT_ADMIN_MOTOR_LANDUSE, DC_RLTNS_NOT_ADMIN_RESTRICTION_LANDUSE)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 26,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "build_gpdf_list len(shpobjs_from_nodes)=19386,len(shpobjs_from_ways)=127877,len(shpobjs_from_rltns)=1888\n"
+     ]
+    }
+   ],
+   "source": [
+    "GPDF_NEARBY2 = build_gpdf_list_from_osm2(OSM_DC_BBOX, DC_NODES,DC_WAYS_NOT_ADMIN_MOTOR_LANDUSE, DC_RLTNS_NOT_ADMIN_RESTRICTION_LANDUSE)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
    "metadata": {
     "collapsed": true
    },
@@ -315,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 28,
    "metadata": {
     "collapsed": true
    },
@@ -347,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 29,
    "metadata": {
     "collapsed": true
    },
@@ -394,6 +418,15 @@
    "source": [
     "GPDF_NEARBY_MEGED, MERGED_HISTORY, MERGE_HIERARCHY, EQ_PAIR_INDEX = merge_within(GPDF_NEARBY)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
