--- a/semantic_segs/OSM_near_segments.ipynb
+++ b/semantic_segs/OSM_near_segments.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -11,9 +11,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "begin reading osm 2016-11-10 21:36:13.617000\n",
-      "finish reading osm 2016-11-10 21:37:27.512000\n",
-      "[\"len of <class 'osmread.elements.Relation'> = 3427\", \"len of <class 'osmread.elements.Node'> = 2546260\", \"len of <class 'osmread.elements.Way'> = 306332\"]\n",
+      "begin reading osm 2016-11-12 20:55:31.984000\n",
+      "finish reading osm 2016-11-12 20:56:45.616000\n",
+      "[\"len of <class 'osmread.elements.Node'> = 2546260\", \"len of <class 'osmread.elements.Way'> = 306332\", \"len of <class 'osmread.elements.Relation'> = 3427\"]\n",
       "Node 1652906\n",
       "Relation 2556\n",
       "Way 194767\n"
@@ -25,7 +25,7 @@
        "(194767, 1652906, 2556)"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -38,10 +38,10 @@
     "from osmread import Node, Way, Relation\n",
     "import datetime\n",
     "import pandas as pd\n",
-    "OSM_DC_BBOX_PATH = '../data/dc_bbox.osm'\n",
+    "OSM_DC_BBOX_PATH = '../data/osm/osm_dc_bbox.osm'\n",
     "OSM_DC_BBOX = osm_container(OSM_DC_BBOX_PATH)\n",
     "print OSM_DC_BBOX.data_size()\n",
-    "DC_OSM_IDS_PATH ='../data/dc_osm_ids_within_polygon.txt'\n",
+    "DC_OSM_IDS_PATH ='../data/osm/osm_ids_within_dc_polygon.txt'\n",
     "DC_OSM_IDS={}\n",
     "with open(DC_OSM_IDS_PATH) as f:\n",
     "    DC_OSM_IDS = eval(f.readlines()[0])\n",
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -71,7 +71,7 @@
        "(37912, 190931, 2552)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
@@ -124,6 +124,25 @@
   {
    "cell_type": "code",
    "execution_count": 7,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "37912 190931 7356\n"
+     ]
+    }
+   ],
+   "source": [
+    "gpdf = build_gpdf_list_from_osm(OSM_DC_BBOX, DC_NODES_WITH_TAG,DC_WAYS_WITH_TAG, DC_RLTNS_WITH_TAG)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
