--- a/semantic_segs/frsq venues visualization of new taxonomy mapping based on xmind tree.ipynb
+++ b/semantic_segs/frsq venues visualization of new taxonomy mapping based on xmind tree.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 129,
    "metadata": {
     "collapsed": false
    },
@@ -81,6 +81,7 @@
    ],
    "source": [
     "import geopandas as gp\n",
+    "import pandas as pd\n",
     "from plotly.offline import plot as pplot, iplot as piplot, init_notebook_mode\n",
     "import plotly.graph_objs as pgo\n",
     "init_notebook_mode()"
@@ -88,32 +89,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "FRSQ_DIR ='../data/frsq/'\n",
-    "FRSQ_GRAPH_DIR = FRSQ_DIR+'graphs/'\n",
-    "SUFFIX = '_nearby'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": 115,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "frsq_venues_path = FRSQ_DIR+ 'frsq_extracted_venues{}.geojson'.format(SUFFIX)\n",
-    "venues_gpdf = gp.read_file(frsq_venues_path)\n"
+    "def get_new_taxonomy ():\n",
+    "    result = []\n",
+    "    xmind_tree = '../data/frsq/taxonomy mapping based on xmind.txt'\n",
+    "    with open(xmind_tree) as f:\n",
+    "        lvs = ['','','','','','','','','']\n",
+    "        for line in f:\n",
+    "            line = line.split('\\t')\n",
+    "            lv = len(line)\n",
+    "            node = line[-1].strip()\n",
+    "            lvs[lv]=node\n",
+    "            parent = '/'.join(lvs[:lv])\n",
+    "            result.append([lv, node, parent, lvs[1]])\n",
+    "    return pd.DataFrame(result,columns=['lv','tag','parents','top_parent'])\n",
+    "\n",
+    "new_taxonomy = get_new_taxonomy()\n",
+    "mapping = pd.Series(new_taxonomy.top_parent.values,index=new_taxonomy.tag).to_dict()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": 116,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "518"
+      ]
+     },
+     "execution_count": 116,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(mapping)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 117,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "FRSQ_DIR ='../data/frsq/'\n",
+    "FRSQ_GRAPH_DIR = FRSQ_DIR+'graphs/'\n",
+    "SUFFIX = '_nearby'\n",
+    "frsq_venues_path = FRSQ_DIR+ 'frsq_extracted_venues{}.geojson'.format(SUFFIX)\n",
+    "venues_gpdf = gp.read_file(frsq_venues_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 118,
    "metadata": {
     "collapsed": false
    },
@@ -126,7 +165,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 207,
+     "execution_count": 118,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -137,101 +176,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "20463"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "cnt_venues = venues_gpdf.shape[0]\n",
-    "cnt_venues"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 135,
    "metadata": {
     "collapsed": false,
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "506"
-      ]
-     },
-     "execution_count": 39,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "categories_we_have = set(venues_gpdf.category)\n",
-    "len(categories_we_have)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 73,
-   "metadata": {
-    "collapsed": false
+    "scrolled": false
    },
    "outputs": [],
    "source": [
-    "categories_count = venues_gpdf[['category','name']].groupby('category').agg('count').sort('name',ascending=False)\n",
-    "categories_count.reset_index(inplace=True)\n",
-    "categories_count.columns = ['name', 'venues_cnt']"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# category tree"
+    "venues_gpdf['mapped'] = venues_gpdf.category.apply(lambda x: mapping[x.encode('utf-8')] if x.encode('utf-8') in mapping else 'no category')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "frsq_taxonomy_path = FRSQ_DIR+'frsq_taxonomy_tree.csv'\n",
-    "import pandas as pd\n",
-    "df_cate = pd.read_csv(frsq_taxonomy_path,index_col=0,encoding='utf-8')\n",
-    "categories_in_tree = set(df[df.name.isin(categories_we_have)].name)\n",
-    "df_cate=df_cate.merge(categories_count,how='left')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 196,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "mask1 = df_cate.name.isin(categories_we_have)\n",
-    "mask2 = mask1 | (df_cate.cid.isin(df[mask1].parent_id))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 262,
+   "execution_count": 136,
    "metadata": {
     "collapsed": false
    },
@@ -239,21 +196,21 @@
     {
      "data": {
       "text/plain": [
-       "((886, 8), (505, 8), (511, 8))"
+       "Series([], dtype: int64)"
       ]
      },
-     "execution_count": 262,
+     "execution_count": 136,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_cate.shape, df_cate[mask1].shape, df_cate[mask2].shape"
+    "venues_gpdf[venues_gpdf.mapped=='NAN'].category.value_counts()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 263,
+   "execution_count": 137,
    "metadata": {
     "collapsed": false
    },
@@ -261,398 +218,58 @@
     {
      "data": {
       "text/plain": [
-       "level\n",
-       "1     10\n",
-       "2    437\n",
-       "3    345\n",
-       "4     81\n",
-       "5     13\n",
-       "Name: cid, dtype: int64"
+       "Building         577\n",
+       "Road             421\n",
+       "Moving Target    117\n",
+       "Intersection      48\n",
+       "dtype: int64"
       ]
      },
-     "execution_count": 263,
+     "execution_count": 137,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_cate.groupby('level').agg('count').cid"
+    "venues_gpdf[venues_gpdf.mapped=='questions'].category.value_counts()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 264,
+   "execution_count": 138,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "dist = venues_gpdf.groupby('mapped').agg('count')['category']\n",
+    "values = dist.values\n",
+    "labels = dist.index.tolist()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 139,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div id=\"4906058a-7c6d-475d-9978-bbb6d3ae5c8e\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"4906058a-7c6d-475d-9978-bbb6d3ae5c8e\", [{\"y\": [3012, 1127, 2719, 1300, 3308, 1203, 2876, 1163, 780, 946, 1751, 278], \"x\": [\"Food\", \"Nightlife Spot\", \"Outdoors & Recreation\", \"Residence\", \"Shop\", \"no category\", \"organization office\", \"questions\", \"schools&University\", \"service\", \"transportation\", \"travel\"], \"type\": \"bar\"}], {}, {\"linkText\": \"Export to plot.ly\", \"showLink\": true})});</script>"
+      ],
       "text/plain": [
-       "level\n",
-       "1     10\n",
-       "2    321\n",
-       "3    164\n",
-       "4     16\n",
-       "Name: cid, dtype: int64"
+       "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 264,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
-    "df_cate[mask2].groupby('level').agg('count').cid"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# distribution of categories"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 268,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "def get_df_of_interest(df):\n",
-    "    from collections import defaultdict\n",
-    "    df_of_interest = df.copy()\n",
-    "    df_of_interest = df_of_interest.append(\n",
-    "        pd.DataFrame([['']+['root']*(df_of_interest.shape[1]-4)+[0]*3],columns=df_of_interest.columns),\n",
-    "        ignore_index=True)\n",
-    "    df_of_interest.venues_cnt = df_of_interest.venues_cnt.fillna(0)\n",
-    "    lvls = pd.unique(df_of_interest.sort('level',ascending=False).level)\n",
-    "    update_cnt = defaultdict(list)\n",
-    "    for lv in lvls:\n",
-    "        df_lv = df_of_interest[df_of_interest.level==lv]\n",
-    "        for row in df_lv.iterrows():\n",
-    "            idx = row[0]\n",
-    "            row = row[1]\n",
-    "            parent,cid, vcnt = row['parent_id'], row.cid, row.venues_cnt\n",
-    "            children = update_cnt.get(cid, [])\n",
-    "            children_cnt = len(children)\n",
-    "            cnt = 0\n",
-    "            for c in children:\n",
-    "                cnt+=c[-1]\n",
-    "                children_cnt+=c[-2]\n",
-    "            \n",
-    "            update_cnt[parent].append((idx,cid, vcnt ,children_cnt,cnt+vcnt))\n",
-    "    list_cnt = []\n",
-    "    for k, v in update_cnt.items():\n",
-    "        list_cnt+=v\n",
-    "    return df_of_interest.merge(pd.DataFrame(list_cnt, columns=['index','cid', 'vcnt' ,'children_cnt','aggcnt']).set_index('index'))\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 269,
-   "metadata": {
-    "collapsed": false,
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "df_of_interest = get_df_of_interest(df_cate[mask2])\n",
-    "df_of_interest[df_of_interest.level==1][['name','children_cnt']]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 275,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "with open(FRSQ_DIR+'frsq_taxonomy_tree.txt','w') as f:\n",
-    "    f.write('\\n'.join(df_of_interest.apply(lambda x:'{}{}'.format('\\t'*x.level, x['name'].encode('utf-8')), axis=1).values))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 271,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "def get_df_lv(df, lv):\n",
-    "    df_lv = df[df.level==lv].copy()\n",
-    "    df_lv = df_lv.sort(['parent_id', 'cid']).merge(df[df.level==(lv-1)][['cid','name']], left_on='parent_id', right_on='cid', how='left')\n",
-    "    df_lv = df_lv[['cid_x','name_x','aggcnt','name_y']]\n",
-    "    df_lv.columns = [['cid','name','aggcnt','parent_name']]\n",
-    "    df_lv = df_lv[['parent_name','cid','name','aggcnt']]\n",
-    "    return df_lv\n",
-    "\n",
-    "def get_random_color(parents):\n",
-    "    rand_colors = {}\n",
-    "    import random\n",
-    "    for p in parents:\n",
-    "        rand_colors[p] = \"#%06x\" % random.randint(0, 0xFFFFFF)\n",
-    "    return rand_colors        \n",
-    "\n",
-    "def get_category_dist(df_lv,rand_colors):\n",
-    "    parents,colors, labels, cnts = [], [], [], []\n",
-    "    for parent,cid, name, aggcnt in df_lv.values:\n",
-    "        parents.append(parent)\n",
-    "        colors.append(rand_colors[parent])\n",
-    "        labels.append(name)\n",
-    "        cnts.append(aggcnt)\n",
-    "    return parents,colors, labels, cnts\n",
-    "\n",
-    "    \n",
-    "def get_bar_plot(parents,colors, labels, cnts, lv, fn_bar):\n",
-    "    pplot_para = {}\n",
-    "    pplot_para['data'] = [pgo.Bar(x=labels,y=cnts,text=parents,marker=dict(color=colors))]\n",
-    "    pplot_para['layout'] = pgo.Layout(title='distribution of categories, level={}'.format(lv), \n",
-    "                                xaxis=dict(title='category'), yaxis=dict(title='cnt of venues'))\n",
-    "    pplot(pplot_para, filename=fn_bar)\n",
-    "def visualize_category_dist(df, lv):\n",
-    "    fn_csv = FRSQ_GRAPH_DIR+'frsq_categories_distr_lv={}{}.csv'.format(lv,SUFFIX)\n",
-    "    fn_bar = FRSQ_GRAPH_DIR+'frsq_categories_distr_lv={}{}.html'.format(lv,SUFFIX)\n",
-    "    df_lv = get_df_lv(df, lv)\n",
-    "    df_lv.to_csv(fn_csv, encoding='utf-8')\n",
-    "    parents = df_lv.parent_name.tolist()\n",
-    "    rand_colors = get_random_color(parents)\n",
-    "    parents,colors, labels, cnts = get_category_dist(df_lv, rand_colors)\n",
-    "    get_bar_plot(parents,colors, labels, cnts,lv,fn_bar)\n",
-    "\n",
-    "    \n",
-    "lvls = pd.unique(df_of_interest.sort('level',ascending=False).level)\n",
-    "for i in lvls[-2:-1]:\n",
-    "    visualize_category_dist(df_of_interest, i)\n",
-    "    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "venues_with_categories = venues_gpdf.category[~(venues_gpdf.category=='')]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "collapsed": false,
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "has categories 19260 0.941210966134\n",
-      "no categories  1203  0.058789033866\n"
-     ]
-    }
-   ],
-   "source": [
-    "print 'has categories', venues_with_categories.shape[0], venues_with_categories.shape[0]*1.0/cnt_venues\n",
-    "print 'no categories ', cnt_venues-venues_with_categories.shape[0],'', 1- venues_with_categories.shape[0]*1.0/cnt_venues"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "categories_distr = venues_with_categories.value_counts()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'file://D:\\\\\\xa1\\xef\\xa1\\xef\\xd1\\xa7\\xcf\\xb0\\xb9\\xa4\\xd7\\xf7\\\\Life in Maryland\\\\Research Project\\xa3\\xbaCyclingSafe\\\\github\\\\Cycling_Safe\\\\data\\\\frsq\\\\graphs\\\\frsq_categories_hist_nearby.html'"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "x = categories_distr.index.tolist()\n",
-    "y = categories_distr.values.tolist()\n",
-    "pplot({'data':[pgo.Scatter(x=x,y=y)], \n",
-    "        'layout': pgo.Layout(title='distribution of categories', xaxis=dict(title='category'), \n",
-    "                                                            yaxis=dict(title='cnt of venues'))\n",
-    "       },\n",
-    "       filename=FRSQ_GRAPH_DIR+'frsq_categories_distr{}.html'.format(SUFFIX)\n",
-    "      )\n",
-    "pplot({\n",
-    "        'data':[pgo.Histogram(x=y)], \n",
-    "        'layout': pgo.Layout(title='histogram of categories', xaxis=dict(title='cnt of venues'), \n",
-    "                                                            yaxis=dict(title='cnt of categories'))\n",
-    "        },\n",
-    "       filename=FRSQ_GRAPH_DIR+'frsq_categories_hist{}.html'.format(SUFFIX)\n",
-    "      )"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
-   "source": [
-    "# spatial distribution"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "%matplotlib inline"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "import sys, os\n",
-    "sys.path.insert(0, os.path.abspath('../'))\n",
-    "from utils.geofunc import grid_area"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(-77.1197663, 38.7916303, -76.909366, 38.9958524)"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "dc_poly_path = '../data/dc_polygon.geojson'\n",
-    "dc_poly_gpdf = gp.read_file(dc_poly_path)\n",
-    "dc_poly = dc_poly_gpdf.geometry.values[0]\n",
-    "dc_bbox = dc_poly.bounds\n",
-    "dc_bbox"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "grids_dc = grid_area((dc_bbox[0], dc_bbox[1]), (dc_bbox[2], dc_bbox[3]), ngrid=100)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "import shapely.geometry as shpgeo\n",
-    "grids_shp = []\n",
-    "for grid in grids_dc:\n",
-    "    grids_shp.append(shpgeo.box(grid[0][0],grid[0][1], grid[1][0],grid[1][1]))\n",
-    "grids_gpdf = gp.GeoDataFrame(grids_shp, columns=['geometry'])\n",
-    "# grids_gpdf.plot()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "grids_gpdf.crs = {'init': u'epsg:4326'}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "import utils.leaflet_creation_v2;reload(utils.leaflet_creation_v2)\n",
-    "from utils.leaflet_creation_v2 import get_color_for_df, create_map_visualization"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "venus_in_grids = gp.tools.sjoin(venues_gpdf, grids_gpdf)\n",
-    "grids_venues_cnt = grids_gpdf.merge(gp.GeoDataFrame(venus_in_grids.groupby('index_right').agg('count').name),\n",
-    "                                    left_index=True, right_index=True)\n",
-    "grids_venues_cnt.columns = ['geometry', 'venues_cnt']\n",
-    "get_color_for_df(grids_venues_cnt, 'venues_cnt', False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "html_title = 'frsq_venues_distribution'\n",
-    "file_path = FRSQ_GRAPH_DIR\n",
-    "file_name = 'frsq_venues'+SUFFIX\n",
-    "lon, lat = dc_poly.centroid.coords[0]\n",
-    "zoom = 12\n",
-    "init_layer = ['light', 'venues_layer']\n",
-    "map_layer = ['light','streets','satellite']\n",
-    "binding_data = [['venues', 'foursqaure venues']]\n",
-    "gpdfs = [grids_venues_cnt]\n",
-    "create_map_visualization(html_title, file_path, file_name, lat, lon, zoom, init_layer, map_layer, binding_data, gpdfs)"
+    "data = [pgo.Bar(x=labels,y=values)]\n",
+    "piplot(data)"
    ]
   },
   {
